[project]
name = "rf-lviv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.7.3",
    "matplotlib>=3.10.3",
    "pyhackrf>=0.2.0",
    "pysdr>=1.2",
    "python-hackrf>=1.3.2",
]

[tool.ruff]
extend-exclude = ["."]

[tool.pyright]
# Disable specific type checking rules
reportMissingTypeStubs = false
reportMissingImports = false

# Change the type checking mode
typeCheckingMode = "basic"
